# Django-TrainingII

./: .gitignore  README.md  pyproject.toml
accounts/: forms.py  urls.py  views.py
albums/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_alter_album_creationtime.py  0003_song.py  0004_songform_delete_song.py  0005_rename_songform_song.py  0006_album_created_album_modified.py
albums/tests/: test_endpoints.py  test_serializers.py
artists/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_artist_user.py  0003_alter_artist_user.py  0004_alter_artist_user.py
artists/tests/: test_views.py
authentication/: serializers.py  urls.py  views.py
authentication/tests/: fixtures.py  test_login.py  test_register.py
musicplatform/: settings.py  urls.py
musicplatform/static/css/: style.css
templates/accounts/: login.html  register.html
templates/albums/: createAlbum.html
templates/artists/: addArtist.html  info.html  style.css
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_table.py
users/tests/: test_views.py
