[tool.poetry]
name = "django-trainingii"
version = "0.1.0"
description = ""
authors = ["Mohamed Said <muhamdsaid253@gmail.com>"]
readme = "README.md"
packages = [{include = "django_trainingii"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
